--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,14 @@
-.App {
+body {
+  --slack-color: #3f0f40;
+  overflow: hidden;
+}
+
+.app__body {
+  display: flex;
+  height: 100vh;
+}
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +45,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
